# fdep-rs

./: .gitignore  Cargo.toml  README.md  setup.sh
fdep_output/src/: lib.json
src/: analysis.rs  lib.rs  main.rs  visitor.rs
