[package]
name = "fdep-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
# No external dependencies needed

# This marks the crate as requiring rustc_private features
# Note: This technically makes the crate nightly-only
[package.metadata.rust-analyzer]
rustc_private = true
