[package]
name = "fdep-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
walkdir = "2.5.0"
# No external dependencies needed

# This marks the crate as requiring rustc_private features
# Note: This technically makes the crate nightly-only
[package.metadata.rust-analyzer]
rustc_private = true