[package]
name = "fdep"
version = "0.1.0"

[dependencies]
cargo_metadata = "0.18.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
rustc_version = "0.4.0"
wait-timeout = "0.2.0"
which = "6.0.2"

[[bin]]
name = "fdep"

[[bin]]
name = "cargo-fdep"

[package.metadata.rust-analyzer]
rustc_private = true